<resources>
    <string name="app_name">S T T </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="quit_app">Are you sure you want to quit this app?</string>
    <string name="yes_upp">YES</string>
    <string name="no_upp">NO</string>

    <string name="title_activity_simple_game">SimpleGameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="default_time">00:00</string>
    <string name="setting_level">难度</string>
    <string name="setting_adjust">调整游戏难度</string>
    <string name="setting_makediff">使拼图块数量不同</string>
    <string name="setting_about"> 关于 </string>
    <string name="setting_copyright_cn">本游戏仅供娱乐学习使用，未经允许不得修改</string>
    <string name="setting_copyright_en">Power by Jay</string>
    <string name="setting_level_3">3 X 3</string>
    <string name="setting_level_4">4 X 4</string>
    <string name="setting_level_5">5 X 5</string>
    <string name="setting_level_6">6 X 6</string>
    <string name="setting_share">我最近在玩 拼图 觉得不错，推荐你也下载来玩一下~</string>

    <string name="just_now">刚刚</string>
    <string name="minuites_ago">分钟前</string>
    <string name="hours_ago">小时前</string>
    <string name="yestoday">昨天</string>
    <string name="the_day_before_yestoday">前天</string>
    <string name="days_ago">天前</string>


</resources>
