<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:clickable="true">

        <include layout="@layout/common_toolbar"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settingBg"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/iconHelp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="40dp"
                android:background="@mipmap/help"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/iconHelp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/setting_level"
                    android:textColor="@color/themeBlue"
                    android:textSize="23sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_adjust"
                    android:textColor="@color/fontGrey"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_makediff"
                    android:textColor="@color/fontGrey"
                    android:textSize="10sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/levelChooseButton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_background"
                android:text="3 X 3"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/logo"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@color/settingBg"/>

            <TextView
                android:id="@+id/textAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_about"
                android:textColor="@color/fontGrey"
                android:textSize="20sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/settingBg"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="153dp"
            android:layout_above="@+id/buttonShare"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@mipmap/logo"/>

        <ImageButton
            android:id="@+id/buttonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/copyrightCN"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="45dp"
            android:background="@mipmap/share"/>

        <TextView
            android:id="@+id/copyrightCN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/copyrightEN"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/setting_copyright_cn"
            android:textColor="@color/fontGrey"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/copyrightEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/setting_copyright_en"
            android:textColor="@color/fontGrey"
            android:textSize="12sp"/>
    </RelativeLayout>



</LinearLayout>


